--- a/wx-job-web/src/main/resources/quartz.properties
+++ b/wx-job-web/src/main/resources/quartz.properties
@@ -1,8 +1,10 @@
 org.quartz.scheduler.instanceName = WX-Scheduler
 
+org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 org.quartz.threadPool.threadCount = 5
 org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.StdJDBCDelegate
+org.quartz.jobStore.useProperties=false
 org.quartz.jobStore.tablePrefix = QRTZ_
 org.quartz.jobStore.dataSource = default
 
