学习分布式调度...

--- a/wx-job-web/src/main/resources/quartz.properties
+++ b/wx-job-web/src/main/resources/quartz.properties
@@ -2,11 +2,16 @@ org.quartz.scheduler.instanceName = WX-Scheduler
 
 org.quartz.threadPool.class=org.quartz.simpl.SimpleThreadPool
 org.quartz.threadPool.threadCount = 5
+
+org.quartz.jobStore.misfireThreshold = 60000
 org.quartz.jobStore.class = org.quartz.impl.jdbcjobstore.JobStoreTX
 org.quartz.jobStore.driverDelegateClass = org.quartz.impl.jdbcjobstore.StdJDBCDelegate
 org.quartz.jobStore.useProperties=false
 org.quartz.jobStore.tablePrefix = QRTZ_
+
 org.quartz.jobStore.dataSource = default
+org.quartz.jobStore.isClustered = true  
+org.quartz.jobStore.clusterCheckinInterval = 20000
 
 org.quartz.dataSource.default.driver = com.mysql.jdbc.Driver
 org.quartz.dataSource.default.URL = jdbc:mysql://localhost:3306/wxjob?characterEncoding=utf-8&useSSL=false
