--- a/wx-job-web/pom.xml
+++ b/wx-job-web/pom.xml
@@ -63,6 +63,10 @@
 			<artifactId>quartz-jobs</artifactId>
             <version>2.3.0</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
