--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0.0</version>
 
     <modules>
+        <module>wx-spring-boot-starter-job</module>
         <module>wx-job-web</module>
     </modules>
 
